Tryign to fix layout issues

--- a/athlete-compare/styles/style.css
+++ b/athlete-compare/styles/style.css
@@ -371,3 +371,13 @@ body{
 .bottom-image img {
   max-height: 220px;
 }
+.wide {
+  overflow: hidden; /* keeps everything inside the card */
+}
+
+.wide-img{
+  width: 100%;
+  height: 260px;      /* match your box height */
+  object-fit: contain; /* fits entire image inside */
+  display: block;
+}
